# kivi-paperi-sakset

./: README.md  maarittelydokumentti.md  pyproject.toml  tasks.py
docs/: kayttoohje.md  maarittelydokumentti.md  peli-tilastoja.md  testaus.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: ai.py  game.py  game_components.py  index.py  trie.py
src/tests/: ai_test.py  game_components_test.py  integration_test.py  trie_test.py
