[tool.poetry]
name = "kivi-paperi-sakset"
version = "0.1.0"
description = ""
authors = ["Mette Munne <mette.ruusu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"
autopep8 = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
